css/app/common.css
/**
 * Color Scheme:
 * Backgound: dark-gray
 * Base Font: off-white
 * Links: #48B8F2
 * Headers: #ABF000
 * I just like writing beautiful code.
 */
body {
  background-color: #333;
  color: #DDD;
  font-family: 'Source Code Pro';
  font-size: 12px;
  text-align: left;
}

h1 {
    font-size: 2.2em;
    text-align: center;
}

h2 {
    font-size: 1.4em;
}

h3 {
    font-size: 1.3em;
}

h4 {
    font-size: 1.2em;
}

h5 {
    font-size: 1.1em;
}

h1,
h2,
h3,
h4,
h5 {
    transition: color linear 1s;
    color: #ABF000;
}

p {
    font-size: 1em;
}

a,
a:visited,
a:active {
    color: #48B8F2;
}

a:hover {
    transition: opacity linear 1s;
    opacity: 0.5;
}

.table > thead > tr > th,
.table > tbody > tr > th,
.table > tfoot > tr > th,
.table > thead > tr > td,
.table > tbody > tr > td,
.table > tfoot > tr > td {
    border: none; /* bootstrap override */
    padding: 0;
}

#footer {
    bottom: 0;
    height: 60px;
    position: absolute;
    width: 100%;
}

